--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,6 +27,9 @@
 .flex-end{
   @apply flex justify-end items-center
 }
+.flex-start{
+  @apply flex justify-start items-center
+}
 
 
 /* It set 1rem = 10px */
