create post complete

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,6 +11,7 @@
 @import './swiper.scss';
 @import './product-description.scss';
 @import './custom-date-picker.scss';
+@import './quillEditer.scss';
 
 .container {
   @apply max-w-[1200px] w-full mx-auto xl:px-0;
