--- a/src/styles/quillEditer.scss
+++ b/src/styles/quillEditer.scss
@@ -8,9 +8,21 @@
     outline: none;
 
     img {
-      max-width: 300px!important;
-      max-height: 500px!important;
+      max-width: 300px !important;
+      max-height: 500px !important;
       object-fit: cover;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    p,
+    span,
+    li,
+    div {
+      @apply select-text;
     }
   }
 
