add home decord

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,7 +1,6 @@
-.footer {
-  .background {
-    
-    background: linear-gradient(98.86deg, #8f489c 35.14%, #faa61a 109.56%); 
+.footer, .home-decor {
+  .background-default {
+    background: linear-gradient(98.86deg, #8f489c 35.14%, #faa61a 109.56%);
     opacity: 0.1;
   }
 }
