update price range

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,7 @@
 @import './product-description.scss';
 @import './custom-date-picker.scss';
 @import './quillEditer.scss';
+@import './input-range.scss';
 
 .container {
   @apply max-w-[1200px] w-full mx-auto xl:px-0;
