--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -18,13 +18,13 @@ $blue-600: #3182ce;
 $blue-700: #2b6cb0;
 $blue-800: #2c5282;
 $blue-900: #2a4365;
-$blue: #2F80ED;
+$blue: #2f80ed;
 
-$primary: #B35EC2;
+$primary: #b35ec2;
 $primary-100: rgba(143, 72, 156, 0.1);
 $primary-200: rgba(179, 94, 194, 0.12);
 
-$background: #FBFBFB;
+$background: #fbfbfb;
 
 $black: #000000;
 $black-100: rgba(0, 0, 0, 0.1);
@@ -33,10 +33,10 @@ $black-500: rgba(0, 0, 0, 0.5);
 $black-600: rgba(0, 0, 0, 0.6);
 $black-700: rgba(0, 0, 0, 0.7);
 
-$white: #ffffff;;
+$white: #ffffff;
 
-$red: #FF3B30;
-$red-100: #FFE4E4;
+$red: #ff3b30;
+$red-100: #ffe4e4;
 $red-200: #fad4d1;
 $red-300: #f8bfba;
 $red-400: #f5aaa3;
@@ -45,3 +45,16 @@ $red-600: #f07f75;
 $red-700: #ee6a5d;
 $red-800: #ec5446;
 $red-900: #e93f2f;
+
+$header_tab_width: 116px;
+$header_tab_height: 36px;
+$header_height: 90px;
+$header_nav_height: 46px;
+$header_group_height: 136px;
+$header_mobile_height: 110px;
+$modal_auth_height: 520px;
+$modal_auth_width: 800px;
+$category_dropdown_height: 470px;
+$cart_summary_mobile_height: 70px;
+$bottom_nav_height: 60px;
+$mobile_bottom_distance_default: 130px;
