update product detail price

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,7 @@
 @import './custom-date-picker.scss';
 @import './quillEditer.scss';
 @import './input-range.scss';
+@import './joditEditor-custom.scss';
 
 .container {
   @apply max-w-[1200px] w-full mx-auto xl:px-0;
