--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,6 +15,7 @@
 @import './quillEditer.scss';
 @import './input-range.scss';
 @import './tinyMceEditor.scss';
+@import './backdrop.scss';
 
 .container {
   @apply max-w-[1200px] w-full mx-auto xl:px-0;
