--- a/src/styles/customize.scss
+++ b/src/styles/customize.scss
@@ -132,6 +132,30 @@
     object-fit: cover;
     margin: 12px auto !important;
   }
+
+  p,
+  a,
+  span,
+  li
+  {
+    font-size: 1.7rem;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2.2rem;
+  }
+
+  h3 {
+    font-size: 2.1rem;
+  }
+
+  h4: {
+    font-size: 1.8rem;
+  }
 }
 
 .zalo-chat-widget {
